[package]
name = "rocky-server"
version = "0.1.0"
authors = ["Laurent Belmonte <laurent.belmonte@gmail.com>"]


#[[bin]]
#name = "client"
#path = "src/client.rs"

[dependencies]
protobuf        = "1.*"
futures         = "0.*"
futures-cpupool = "0.1.*"
tls-api         = "0.*"
bytes="0.4.6"
grpc="0.2.1"
rocky={path="../rocky-store"}
base64="=0.9.0"

[build-dependencies]
protoc-rust-grpc = "0.2.1"
